objects/OF_Staging_PNI__c.object
<CustomObject>
    <fields>
        <fullName>OF_Civico__c</fullName>
        <label>OF_Civico</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Comune__c</fullName>
        <label>OF_Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_GIS_Codice_Ordine_Olo__c</fullName>
        <label>Codice Ordine OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_GIS_Data_Espletamento__c</fullName>
        <label>Data Espletamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_GIS_Nome_Scala__c</fullName>
        <label>Nome Scala</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_GIS_OLO__c</fullName>
        <label>OF_GIS_OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_GIS_Pop_Tmw__c</fullName>
        <label>Pop Tmw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ID_Building__c</fullName>
        <label>OF_ID_Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ID_GIS_ScalaPalazzina__c</fullName>
        <label>OF_ID_GIS_ScalaPalazzina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Id_DB_Scala_palazzina__c</fullName>
        <label>OF_Id_DB_Scala_palazzina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Id_Palazzina__c</fullName>
        <label>OF_Id_Palazzina</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Id_Risorsa__c</fullName>
        <label>OF_Id_Risorsa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Indirizzo__c</fullName>
        <label>OF_Indirizzo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Palazzina__c</fullName>
        <label>OF_Palazzina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Particella_Toponomastica__c</fullName>
        <label>OF_Particella_Toponomastica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Scala_Palazzina__c</fullName>
        <label>OF_Scala_Palazzina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Scala__c</fullName>
        <label>OF_Scala</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Source_System__c</fullName>
        <label>OF_Source_System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_UI_Scala_Palazzina__c</fullName>
        <label>OF_UI_Scala_Palazzina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STG_Info_Esecuzione__c</fullName>
        <label>STG_Info_Esecuzione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>indice__c</fullName>
        <label>indice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isElaborato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isElaborato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isScarto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isScarto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isValid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isValid</label>
        <type>Checkbox</type>
    </fields>
    <label>Staging</label>
    <nameField>
        <label>OF_Staging_PNI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>